# pylibcsv

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  build.sh  main.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py
src/: __init__.py  libcsv.py  libcsv.pyx  main.c
tests/: __init__.py  test_cases.yaml  test_libcsv.py
