[build-system]
requires = ["cython", "setuptools"]

[project]
name = "libcsv"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ "name" = "Guilherme Carvalho de Azevedo" }]

[project.optional-dependencies]
dev = ["mypy", "pip-tools", "ruff", "types-setuptools"]
test = ["pytest", "PyYAML", "types-PyYAML"]

[tool.pip-tools]
strip-extras = true

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "--quiet"
console_output_style = "count"
log_cli = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]

extend-ignore = [
    "D212", # multi-line-summary-first-line: clashes with D213
    "Q000", # quotes: single quotes are preferred
    "ARG",  # flake8-unused-arguments
    "D",    # pydocstyle: removed during early development
    "ERA",  # eradicate: removed during early development
    "T201", # print: removed during early development
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]

[tool.setuptools]
py-modules = []
