[build-system]
requires = ["cython", "setuptools"]

[project]
name = "libcsv"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { "name" = "Guilherme Carvalho de Azevedo", "email" = "guicarvalhoaz@gmail.com" },
]

[project.optional-dependencies]
dev = ["mypy", "pip-tools", "ruff", "types-setuptools"]
test = ["pytest", "PyYAML", "types-PyYAML"]

[tool.mypy]
strict = true

[tool.pip-tools]
allow-unsafe = true
strip-extras = true

[tool.pytest.ini_options]
addopts = "--quiet"
console_output_style = "count"
log_cli = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]

extend-ignore = ["Q000"] # quotes: single quotes are preferred

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"] # assert: essential on testing
